# wadler_lindig

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: build_docs.yml  release.yml  run_tests.yml
docs/: .htaccess  algorithm.md  api.md  custom_pprints.ipynb  customize_dataclasses.ipynb  faq.md  getting_started.ipynb  index.md  methods.ipynb  pattern.ipynb
docs/_overrides/partials/: source.html
docs/_static/: custom_css.css
tests/: test_algorithm.py  test_ansi.py  test_definitions.py  test_diff.py  test_utilities.py
wadler_lindig/: __init__.py  _definitions.py  _wadler_lindig.py
