[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = [
  "prek==0.3.9",
  "pyright==1.1.405",
  "ruff==0.13.0",
  "toml-sort==0.23.1"
]
docs = [
  "hippogriffe==0.2.2",
  "griffe==1.7.3",
  "mkdocs==1.6.1",
  "mkdocs-include-exclude-files==0.1.0",
  "mkdocs-ipynb==0.1.1",
  "mkdocs-material==9.6.7",
  "mkdocstrings==0.28.3",
  "mkdocstrings-python==1.16.8",
  "pygments==2.20.0",
  "pymdown-extensions==10.21.2"
]
tests = ["numpy", "pytest"]

[project]
authors = [
  {email = "contact@kidger.site", name = "Patrick Kidger"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3"
]
dependencies = []
description = "A Wadler–Lindig pretty-printer for Python."
keywords = ["pretty-printer", "pprint", "wadler", "lindig", "leijen"]
license = {file = "LICENSE"}
name = "wadler_lindig"
readme = "README.md"
requires-python = ">=3.10"
urls = {repository = "https://github.com/patrick-kidger/wadler_lindig"}
version = "0.1.7"

[tool.hatch.build]
include = ["wadler_lindig/*"]

[tool.pyright]
include = ["wadler_lindig", "tests"]
reportFunctionMemberAccess = false
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = false

[tool.ruff]
extend-include = ["*.ipynb"]
src = []

[tool.ruff.lint]
fixable = ["I001", "F401", "UP"]
ignore = ["E402", "E721", "E731", "E741", "F722"]
select = ["E", "F", "I001", "UP"]

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
"collections" = "co"
"functools" = "ft"
"itertools" = "it"

[tool.ruff.lint.isort]
combine-as-imports = true
extra-standard-library = ["typing_extensions"]
lines-after-imports = 2
order-by-type = true

[tool.uv]
default-groups = ["dev", "docs", "tests"]
